--- a/speaker.css
+++ b/speaker.css
@@ -157,3 +157,36 @@ footer p {
     color: white;
     padding: 1em 0;
 }
+@media only screen and (max-width: 767px) {
+    header img { float: none; }
+    header { text-align: center; }
+    section {
+        float: none;
+        width: 95%;                     /* 100 - (2 x 2.5) for padding */
+    }
+    aside {
+        float: none;
+        padding-right: 2.5%;           /* 20 / 800 x 100 */
+        width: 95%;                    /* 100 - (2 x 2.5) for padding */
+    }
+    article img { max-width: 30%; }
+    #speakers {
+        -moz-column-count: 2;
+        -webkit-column-count: 2;
+        column-count: 2;
+    }
+    #nav_menu {
+        display: none;
+    }
+    #mobile_menu {
+        display: block;
+    }
+    .slicknav_menu {
+        background-color: #800000 !important;
+    }
+}
+
+/* mobile portrait to mobile landscape */
+@media only screen and (max-width: 479px) {
+    body { font-size: 90%; }
+}
